--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Page Title</title>
+    <title>Card Plank</title>
 </head>
 <body>
     <h1>CardPlank</h1>
