--- a/about.html
+++ b/about.html
@@ -7,3 +7,32 @@
     <h2>Welcome to CardPlank! Coming Soon</h2>
 </body>
 </html>
+
+<nav class="navbar"></nav>
+<div class="navbar__container"></div>
+    <a href="/" id="navbar__logo">NEXT</a>
+    <div class="navbar__toggle" id="mobile-menu"></div>
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
+</div>
+<ul class="navbar__menu">
+    <li class="navbar__item">
+        <a href="/" class="navbar__links"> Home </a>
+    </li>
+    <li class="navbar__item">
+        <a href="/Contact/.html" class="navbar__links"> Contact </a>
+    </li>
+    <li class="navbar__item">
+        <a href="/" class="navbar__links"> About </a>
+    </li>
+    <li class="navbar__btn">
+        <a href="/" class="button"> Sign up </a>
+    </li>
+
+
+</ul>
+
+
+
+
