--- a/index.html
+++ b/index.html
@@ -5,7 +5,45 @@
     <link rel="shortcut icon" type "x-icon" href="planky.png"
 </head>
 <body>
-    <h1>CardPlank</h1>
 </body>
 </html>
+<html>
+ <head>
+     <meta charset="utf-8" />
+     <title>Card Plank</title>
+ </head>
+ <body>
+     <h1>CardPlank</h1>
+ </body>
+ </html>
 
+
+ <nav class="navbar"></nav>
+ <div class="navbar__container"></div>
+     <a href="/" id="navbar__logo">CardPlank</a>
+     <div class="navbar__toggle" id="mobile-menu"></div>
+     <span class="bar"></span>
+     <span class="bar"></span>
+     <span class="bar"></span>
+ </div>
+ <ul class="navbar__menu">
+     <li class="navbar__item">
+         <a href="/" class="navbar__links"> Home </a>
+     </li>
+     <li class="navbar__item">
+         <a href="/Contact/.html" class="navbar__links"> Contact </a>
+     </li>
+     <li class="navbar__item">
+         <a href="/" class="navbar__links"> About </a>
+     </li>
+     <li class="navbar__btn">
+         <a href="/" class="button"> Sign up </a>
+     </li>
+
+
+                 </ul>
+             </div>
+         </nav>   
+         <script src="app.js"></script> 
+     </body>
+ </html>
