--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>CardPlank</title>
-    <link rel="shortcut icon" type="x-icon" href="CARDPLANK.png" />
+    <link rel="shortcut icon" type="x-icon" href="CARDPLANK..png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" />
     <style>
       .navbar {
