--- a/index.html
+++ b/index.html
@@ -78,4 +78,4 @@
           <a href="/" class="navbar__links">About</a>
         </li>
         <li class="navbar__btn">
-          <a href="/" class="button">Sign up</a>
+          <a href="/" class="button">SIGN UP</a>
