--- a/signup.html
+++ b/signup.html
@@ -1,30 +1,61 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="UTF-8">
+	<title>Signup Page</title>
+	<link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
+	<style type="text/css">
+		body {
+			margin: 0;
+			padding: 0;
+		}
+		
+		#centered {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+		}
+		
+		#mc_embed_signup {
+			background: #fff;
+			font: 20px 'Montserrat', sans-serif;
+			width: 100%;
+			height: 80vh;
+			color: #444444;
+			box-sizing: border-box;
+			padding: 50px;
+			max-width: 600px;
+		} 
 
-<link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px 'Montserrat';  width:800px;color: #444444;} 
-</style>
-<div id="mc_embed_signup">
-    <form action="https://cardplank.us21.list-manage.com/subscribe/post?u=629e74b886744511dc397d799&amp;id=f62e941545&amp;f_id=0027a1e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-        <h2>Subscribe</h2>
-        <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
-</label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
-	<span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
-</div>
-	<div id="mce-responses" class="clear foot">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
+	</style>
+</head>
+<body>
+	<div id="centered">
+		<div id="mc_embed_signup">
+			<form action="https://cardplank.us21.list-manage.com/subscribe/post?u=629e74b886744511dc397d799&amp;id=f62e941545&amp;f_id=0027a1e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+				<div id="mc_embed_signup_scroll">
+					<h2>Subscribe to be notified of CardPlank's Release!</h2>
+					<div class="mc-field-group">
+						<label for="mce-EMAIL">Email Address:
+						</label>
+						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
+						<span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+					</div>
+					<div id="mce-responses" class="clear foot">
+						<div class="response" id="mce-error-response" style="display:none"></div>
+						<div class="response" id="mce-success-response" style="display:none"></div>
+					</div>
+					<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_629e74b886744511dc397d799_f62e941545" tabindex="-1" value=""></div>
+					<div class="optionalParent">
+						<div class="clear foot">
+							<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+						</div>
+					</div>
+				</div>
+			</form>
+		</div>
 	</div>
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_629e74b886744511dc397d799_f62e941545" tabindex="-1" value=""></div>
-        <div class="optionalParent">
-            <div class="clear foot">
-                <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
-            </div>
-        </div>
-    </div>
-</form>
-</div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+	<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+	<script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';
+    })
