--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="shortcut icon" type="x-icon" href="CARDPLANK..png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" />
     <style>
+      body {
+        background-image: url('cp.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+
       .navbar {
         display: flex;
         justify-content: space-between;
@@ -78,4 +84,9 @@
           <a href="/" class="navbar__links">About</a>
         </li>
         <li class="navbar__btn">
-        <a href="signup.html" class="button">SIGN UP</a>
+          <a href="signup.html" class="button">SIGN UP</a>
+        </li>
+      </ul>
+    </nav>
+  </body>
+</html>
