--- a/signup.html
+++ b/signup.html
@@ -21,13 +21,18 @@
 			background: #fff;
 			font: 20px 'Montserrat', sans-serif;
 			width: 100%;
-			height: 80vh;
+			height: 45vh;
 			color: #444444;
 			box-sizing: border-box;
 			padding: 50px;
-			max-width: 600px;
+			max-width: 400px;
+            
 		} 
-
+        body {
+        background-image: url('cp.png');
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
 	</style>
 </head>
 <body>
@@ -59,3 +64,4 @@
 	<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
 	<script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';
     })
+    
