--- a/index.html
+++ b/index.html
@@ -90,3 +90,9 @@
     </nav>
   </body>
 </html>
+<div style="background-color: #ffffff; padding: 30px; text-align: center;">
+            
+    <p style="font-family: 'Montserrat', sans-serif; font-size: 1.2rem; color: #444444;">Unlimited auctions, zero fees.</p>
+  </div>
+  
+  
