--- a/signup.html
+++ b/signup.html
@@ -30,7 +30,7 @@
 		} 
         body {
         background-image: url('cp.png');
-        background-repeat: no-repeat;
+        background-repeat: repeat;
         background-size: cover;
       }
 	</style>
