--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         justify-content: space-between;
         align-items: center;
         background-color: #ffffff;
-        height: 80px;
+        height: 100px;
         padding: 0 50px;
         box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
       }
@@ -75,12 +75,10 @@
       <a href="/" id="navbar__logo">CardPlank</a>
       <ul class="navbar__menu">
         <li class="navbar__item">
-          <a href="/" class="navbar__links">Home</a>
+          <a href="index.html" class="navbar__links">Home</a>
         </li>
-        <li class="navbar__item">
-        </li>
-        <li class="navbar__item">
-          <a href="/" class="navbar__links">About</a>
+        <li class="navbar__item" style="margin-right: 30px;">
+          <a href="about.html" class="navbar__links">About</a>
         </li>
         <li class="navbar__btn">
           <a href="signup.html" class="button">SIGN UP</a>
@@ -89,9 +87,6 @@
     </nav>
   </body>
 </html>
-<div style="background-color: #ffffff; padding: 30px; text-align: center;">
-            
+<div style="background-color: #ffffff; padding: 30px; text-align: center;">            
     <p style="font-family: 'Montserrat', sans-serif; font-size: 1.2rem; color: #444444;">Unlimited auctions, zero fees.</p>
-  </div>
-  
-  
+</div>
