--- a/signup.html
+++ b/signup.html
@@ -26,13 +26,13 @@
 			box-sizing: border-box;
 			padding: 50px;
 			max-width: 400px;
-            
 		} 
-        body {
-        background-image: url('cp.png');
-        background-repeat: repeat;
-        background-size: cover;
-      }
+		
+		body {
+			background-image: url('cp.png');
+			background-repeat: repeat;
+			background-size: cover;
+		}
 	</style>
 </head>
 <body>
@@ -42,8 +42,7 @@
 				<div id="mc_embed_signup_scroll">
 					<h2>Subscribe to be notified of CardPlank's Release!</h2>
 					<div class="mc-field-group">
-						<label for="mce-EMAIL">Email Address:
-						</label>
+						<label for="mce-EMAIL">Email Address:</label>
 						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required>
 						<span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
 					</div>
@@ -62,6 +61,5 @@
 		</div>
 	</div>
 	<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
-	<script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';
+	<script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]=
     })
-    
