--- a/signup.html
+++ b/signup.html
@@ -36,7 +36,7 @@
       }
 
       .navbar__links {
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Montserrat';
         font-size: 2rem;
         text-decoration: none;
         color: #444444;
@@ -48,7 +48,7 @@
       }
 
       .button {
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Montserrat';
         font-size: 1.2rem;
         background-color: #0077b6;
         color: #ffffff;
@@ -78,7 +78,7 @@
 		
 		#mc_embed_signup {
 			background: #fff;
-			font: 20px 'Montserrat', sans-serif;
+			font: 20px 'Montserrat';
 			width: 100%;
 			height: 65vh;
 			color: #444444;
@@ -98,7 +98,7 @@
       }
 
       #navbar__logo {
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Montserrat';
         font-weight: 500;
         font-size: 4rem;
         text-transform: uppercase;
@@ -119,7 +119,7 @@
       }
 
       .navbar__links {
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Montserrat';
         font-size: 1.2rem;
         text-decoration: none;
         color: #444444;
@@ -131,7 +131,7 @@
       }
 
       .button {
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Montserrat';
         font-size: 1.2rem;
         background-color: #0077b6;
         color: #ffffff;
@@ -183,7 +183,7 @@
 }
 
 .navbar__links {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat';
   font-size: 1.2rem;
   text-decoration: none;
   color: #444444;
@@ -195,7 +195,7 @@
 }
 
 .button {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Montserrat';
   font-size: 1.2rem;
   background-color: #0077b6;
   color: #ffffff;
@@ -233,7 +233,7 @@ body {
 }
 
       #navbar__logo {
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Montserrat';
         font-weight: 700;
         font-size: 2rem;
         text-transform: uppercase;
@@ -251,7 +251,7 @@ body {
       }
 
       .navbar__links {
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Montserrat';
         font-size: 1.2rem;
         text-decoration: none;
         color: #444444;
@@ -263,7 +263,7 @@ body {
       }
 
       .button {
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Montserrat';
         font-size: 1.2rem;
         background-color: #0077b6;
         color: #ffffff;
