--- a/signup.html
+++ b/signup.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Signup Page</title>
 	<link href="//cdn-images.mailchimp.com/embedcode/classic-071822.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" />
 	<style type="text/css">
         
         body {
