--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@ ul {
         padding-left: 5px;
         color: #000;
       }
+      .img__main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
    
     </style>
   </head>
@@ -194,9 +199,12 @@ ul {
 
   <div class="navbar__right text-sky-500">
     <li class="navbar__btn navbar__item navbar__menu">
-      <a href="signup.html" class="button bg-sky-500">SIGN UP</a>
+      <a href="signup.html" class="button bg-cyan-500">SIGN UP</a>
     </li>
   </div>
+
+<img src="whatevertheimagepathis" alt="img" class="img__main"/>
+
 
 </nav>
 
