--- a/index.html
+++ b/index.html
@@ -202,9 +202,9 @@ ul {
       <a href="signup.html" class="button bg-cyan-500">SIGN UP</a>
     </li>
   </div>
-
+</div>
 <img src="whatevertheimagepathis" alt="img" class="img__main"/>
-
+</div>
 
 </nav>
 
