--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     margin-left: -50px !important;
     width: 400px;
     height: auto;
-    margin-top: 30px
+    margin-top: 20px
   }
 }
 @media screen and (max-width:767px) {
@@ -202,17 +202,21 @@ ul {
       <a href="signup.html" class="button bg-cyan-500">SIGN UP</a>
     </li>
   </div>
-</div>
-<img src="whatevertheimagepathis" alt="img" class="img__main"/>
-</div>
 
-</nav>
+<img src="example.png" alt="img" class="img__main"/>
+
 
   </div>
       <style>
 
       </style>   
   </body>
+</div>
+
+<img src="example.png" alt="img" class="img__main"/>
+
+
+  </div>
   <script>
     var input = document.querySelector("#search")
     function type() {
