--- a/index.html
+++ b/index.html
@@ -158,15 +158,19 @@ ul {
         padding-left: 5px;
         color: #000;
       }
-      .img__main {
+      .example {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 600px;
 }
    
     </style>
   </head>
   <body>
+  <div class="example">
+  <img src="example.png" alt="img" class="example" />
+</div>
     <nav class="navbar">
   <div class="navbar__left">
     <a href="CAP.PNG" id="navbar__logo">
@@ -202,9 +206,6 @@ ul {
       <a href="signup.html" class="button bg-cyan-500">SIGN UP</a>
     </li>
   </div>
-</div>
-<img src="whatevertheimagepathis" alt="img" class="img__main"/>
-</div>
 
 </nav>
 
