--- a/Auctions.html
+++ b/Auctions.html
@@ -214,7 +214,7 @@ ul {
       </li>
     </ul>
     <div>
-      <a href="register.html" class="button">Register</a>
+      <a href="signup.html" class="button">Register</a>
     </div>
   </div>
   
