--- a/about.html
+++ b/about.html
@@ -246,7 +246,7 @@ p {
       </li>
     </ul>
     <div>
-      <a href="register.html" class="button">Register</a>
+      <a href="signup.html" class="button">Register</a>
     </div>
   </div>
   
