--- a/about.html
+++ b/about.html
@@ -1,173 +1,36 @@
-<!DOCTYPE html><!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>CardPlank</title>
-    <link rel="shortcut icon" type="x-icon" href="CARDPLANK..png" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" />
-    <style>
-      body {
-        background-image: url('cp.png');
-        background-repeat: no-repeat;
-        background-size: stretch;
-        margin-top: 100px;
-      }
-
-      .navbar {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: #ffffff;
-        height: 100px;
-        padding: 0 50px;
-        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background-color: #ffffff;
-  height: 100px;
-  padding: 0 50px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  z-index: 999;
-      }
-      #navbar__logo {
-        font-family: 'Montserrat', sans-serif;
-        font-weight: 700;
-        font-size: 2rem;
-        text-transform: uppercase;
-        text-decoration: none;
-        color: #444444;
-      }
-
-      .navbar__menu {
-        list-style: none;
-        display: flex;
-      }
-
-      .navbar__item {
-        margin-right: 30px;
-        margin-top: 0px;
-      }
-
-      .navbar__links {
-        font-family: 'Montserrat', sans-serif;
-        font-size: 1.2rem;
-        text-decoration: none;
-        color: #444444;
-        text-transform: uppercase;
-      }
-
-      .navbar__links:hover {
-        color: #0077b6;
-      }
-
-      .button {
-        font-family: 'Montserrat', sans-serif;
-        font-size: 1.2rem;
-        background-color: #0077b6;
-        color: #ffffff;
-        border: none;
-        padding: 10px 20px;
-        border-radius: 20px;
-        cursor: pointer;
-      }
-
-      .button:hover {
-        background-color: #ffffff;
-        color: #0077b6;
-        border: 2px solid #0077b6;
-      }
-    </style>
-  </head>
-  <body>
-    <nav class="navbar">
-        <a href="CAP.PNG" id="navbar__logo">
-          <img src="CAP.PNG" alt="CARDPLANK" class="logo-img">
-        </a>     
-        <ul class="navbar__menu">
-          <li class="navbar__item">
-            <a href="index.html" class="navbar__links">Home</a>
-          </li>
-          <li class="navbar__item">
-            <a href="about.html" class="navbar__links">About</a>
-          </li>
-          <li class="navbar__btn">
-            <a href="signup.html" class="button">SIGN UP</a>
-          </li>
-        </ul>
-      </nav>
-      <style>
-        .logo-img {
-        margin-left: -50px !important;
-          width: 400px;
-          height: auto;
-          margin-top: 30px
-        }
-      </style>   
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>About Us</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
-  <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
-      background-image: url('cp.png');
-      background-repeat: repeat;
-      background-size: cover;
-      margin: 150px;
-      padding: 30px;
-    }
-    .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: #ffffff;
-  height: 500px;
-  padding: 50px;
-}
-
-h1 {
-  font-size: 2rem;
-  margin-bottom: 20px;
-}
-
-p {
-  font-size: 1.2rem;
-}
-
-
-    #mc_embed_signup {
-			background: #fff;
-			font: 20px 'Montserrat', sans-serif;
-			width: 100%;
-			height: 85vh;
-			color: #444444;
-			box-sizing: border-box;
-			padding: 50px;
-			max-width: 1800px;
-            margin-top: -50px;
-}
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
+    <title>CardPlank</title>
 </head>
+
+
 <body>
-  <div id="mc_embed_signup">
-    <h1>About Us</h1>
-    <p>We are Brian Edelen and Nate Kienzle, two avid sports card collectors with a passion for creating innovative solutions for the sports card market!</p>
+    
+    <nav class="navbar">
+        <img class="logo" src="./assets/CAP.PNG" alt="logo">
+        <input class="search-bar" type="text" placeholder="Search...">
+        <div class="nav-links">
+            <a href="./index.html">Home</a>
+            <a href="#">About</a>
+            <a href="./auction.html">Auction</a>
+            <a href="./register.html">Register</a>
+        </div>
+    </nav>
 
-    <h2>Brian Edelen</h2>
-    <p>Brian has experience in software development, with expertise in front-end technologies like HTML, CSS, and JavaScript. 
-      He enjoys tackling challenging problems and collaborating with others to build elegant solutions. 
-      Furthermore, he'll be attending UC Irvine in the fall of 2023 and looks to major in business econometrics.</p>
+    <div class="about">
+        <h2>About Us</h2>
+        <p>We are Brian Edelen and Nate Kienzle, two avid sports card collectors with a passion for creating innovative solutions for the sports card market!</p>
+        <h2>Brian Edelen</h2>
+        <p>Brian has experience in software development, with expertise in front-end technologies like HTML, CSS, and JavaScript. He enjoys tackling challenging problems and collaborating with others to build elegant solutions. Furthermore, he'll be attending UC Irvine in the fall of 2023 and looks to major in business econometrics.</p>
+        <h2>Nate Kienzle</h2>
+        <p>Nate has a background in computer science and sports cards, and has collected cards for over 10 years. In addition, he founded the r/footballcardz subreddit with over 4,000 members. He loves working on projects that involve data analysis and visualization, and is always exploring new ways to make complex information more accessible to users. He is a rising sophomore at Wake Forest University.</p>
+        <p>Together, Brian and Nate bring a unique blend of technical expertise and creative problem-solving to the sports card market.</p>
+    </div>
 
-    <h2>Nate Kienzle</h2>
-    <p>Nate has a background in computer science and sports cards, and has collected cards for over 10 years. 
-      In addition, he founded the r/footballcardz subreddit with over 4,000 members. He loves working on projects that involve data analysis and visualization, and is always exploring new ways to make complex information more accessible to users. 
-      He is a rising sophomore at Wake Forest University.</p>
-
-    <p>Together, Brian and Nate bring a unique blend of technical expertise and creative problem-solving to the sports card market.</p>
-  </div>
 </body>
 </html>
