--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="main.css">
     <title>CardPlank</title>
 </head>
@@ -13,7 +15,10 @@
     
     <nav class="navbar">
         <img class="logo" src="./assets/CAP.PNG" alt="logo">
-        <input class="search-bar" type="text" placeholder="Search...">
+        <div class="search-bar">
+            <input class="search-bar" type="text" placeholder="Search...">
+            <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
         <div class="nav-links">
             <a href="./index.html">Home</a>
             <a href="#">About</a>
