--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="main.css">
     <title>CardPlank</title>
@@ -20,9 +19,9 @@
             <i class="fa-solid fa-magnifying-glass"></i>
         </div>
         <div class="nav-links">
-            <a href="./index.html">Home</a>
+            <a href="#">Home</a>
             <a href="./about.html">About</a>
-            <a href="#">Auction</a>
+            <a href="./auction.html">Auction</a>
             <a href="./register.html">Register</a>
         </div>
     </nav>
